--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "author": "Riccardo Lazzari",
   "license": "ISC",
@@ -15,12 +15,16 @@
     "dotenv": "^8.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^5.0.0",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.15.6",
+    "helmet": "^3.21.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.15",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "xss-clean": "^0.1.1"
   }
 }
