--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
 PORT=8080
-DATABASE_LOCAL=mongodb://mongo:27017/restful_blog_app
+DATABASE_LOCAL=mongodb://localhost:27017/restful_blog_app
 SESSION_SECRET=thisphraseissecret
